<resources>
    <string name="app_name">Work Time Measure App</string>
    <string name="about">Application created by Wojciech Szczepaniak (227360@edu.p.lodz.pl)</string>
    <string name="empty_time_string" translatable="false">0:00:00</string>
    <string name="entry_history_date_time_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="channel_end_work_time_name">End of working time</string>
    <string name="channel_end_work_time_description">Notifications showed at the end od working time.</string>
    <string name="channel_work_time_in_progress_name">Work in progress</string>
    <string name="channel_work_time_in_progress_description">Notifications with information about working day.</string>
    <string name="notification_time_short_format" translatable="false">HH:mm</string>
    <string name="notification_time_long_format">E, yyyy-MM-dd HH:mm</string>
    <string name="notification_work_in_progress_title">Current work day duration</string>
    <string name="notification_work_in_progress_text">Expected end of work: %s. Will be better ending at: %s.</string>
    <string name="notification_end_of_work_title">You must leave!</string>
    <string name="notification_end_of_work_text">You spent enough time at work. It\'s time to go home ;)</string>
    <string name="notification_action_stop_work">I\'m going out</string>
    <string name="notification_action_snooze">Snooze</string>
    <string name="notification_action_snooze_to_next">I\' m still working</string>
    <string name="dashboard_activity_title">@string/app_name</string>
    <string name="dashboard_remaining_working_time">Remaining working time</string>
    <string name="dashboard_today">Today:</string>
    <string name="dashboard_month_balance">Monthly balance:</string>
    <string name="dashboard_today_work_time_label">Today works:</string>
    <string name="dashboard_current_day_date_example">Mon., 08.07.2019</string>
    <string name="dashboard_current_day_empty_events_message">No events</string>
    <string name="duration_display_title_example">Title</string>
    <string name="duration_display_value_template" translatable="false">00:00:00</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="base_navbar_header_profile_username_notSetMessage">Username is not set</string>
    <string name="base_navbar_header_profile_email_notSetMessage">E-mail address is not set</string>
    <string name="base_navbar_header_profile_image_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_days_off">Days off</string>
    <string name="menu_header_info">Information</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About…</string>
    <string name="dashboard_snackbar_info_income_registered">The entrance to work was registered</string>
    <string name="dashboard_snackbar_info_outcome_registered">An exit to work was registered</string>
    <string name="dashboard_enter_fab_description">Start or end work time button</string>
    <string name="today_day_off_information_dialog_title">Today is a day off</string>
    <string name="today_day_off_information_dialog_weekend_message">Today, %s is a weekend. Will you use it and rest from work (it will turn off the application)?</string>
    <string name="today_day_off_information_dialog_dayOff_message">Today, %s is a holiday (%s). Will you use it and rest from work (it will turn off the application)?</string>
    <string name="today_day_off_information_dialog_message_date_format">EEEE yyyy-MM-dd</string>
    <string name="today_day_off_information_dialog_action_yes">Yes</string>
    <string name="today_day_off_information_dialog_action_no">No</string>
    <string name="history_activity_title">History</string>
    <string name="history_come_in_label">Income</string>
    <string name="history_come_out_label">Outcome</string>
    <string name="history_day_event_start_date_example">Mon., 08:00</string>
    <string name="history_day_event_item_type_example">@string/history_come_in_label</string>
    <string name="history_day_event_duration_example" translatable="false">8:30:00</string>
    <string name="history_day_event_time_short_format">E, HH:mm:ss</string>
    <string name="history_day_event_time_long_format">E, yyyy-MM-dd HH:mm:ss</string>
    <string name="history_day_event_end_date_now">Now</string>
    <string name="history_day_event_realization_dates_divider" translatable="false">—</string>
    <string name="history_work_day_label_example">Mon, 2018&#8211;01&#8211;01</string>
    <string name="history_work_day_duration_example" translatable="false">08:30:00</string>
    <string name="history_work_day_label_format" translatable="false">E, yyyy-MM-dd</string>
    <string name="history_work_day_duration_format" translatable="false">H:mm:ss</string>
    <string name="history_work_day_empty_events_message" translatable="false">@string/dashboard_current_day_empty_events_message</string>
    <string name="history_come_events_deleted_message" translatable="false">@string/work_day_details_come_events_deleted_message</string>
    <string name="history_come_events_edited_message" translatable="false">@string/work_day_details_come_events_edited_message</string>
    <string name="work_day_details_header_text_example">January 2021</string>
    <string name="work_day_details_card_day_example" translatable="false">1</string>
    <string name="work_day_details_card_weekDay_example">Friday</string>
    <string name="work_day_details_summary_label">Total working time:</string>
    <string name="work_day_details_summary_value_example" translatable="false">00:00:00</string>
    <string name="work_day_details_summary_values_divider" translatable="false">/</string>
    <string name="work_day_details_come_events_label">Work time entries:</string>
    <string name="work_day_details_come_events_no_events_message">@string/dashboard_current_day_empty_events_message</string>
    <string name="work_day_details_come_events_action_edit_am_label" translatable="false">AM</string>
    <string name="work_day_details_come_events_action_edit_pm_label" translatable="false">PM</string>
    <string name="work_day_details_come_events_action_edit_select_date_label">Use current work day date</string>
    <string name="work_day_details_history_label">History of edition:</string>
    <string name="work_day_details_history_no_events_message">No history</string>
    <string name="work_day_details_come_events_deleted_message">Entry has been deleted.</string>
    <string name="work_day_details_come_events_edited_message">Entry has been modified.</string>
    <string name="delete_come_event_dialog_title">Delete workday entry</string>
    <string name="delete_come_event_dialog_delete_message">Are you sure you want to delete the workday entry: %s - %s?</string>
    <string name="delete_come_event_dialog_action_cancel">Cancel</string>
    <string name="time_editor_title_example">Title:</string>
    <string name="time_editor_value_example" translatable="false">00:00:00</string>
    <string name="time_editor_set_time_desc">Set time</string>
    <string name="time_editor_accept_desc">Accept changes</string>
    <string name="time_editor_dismiss_desc">Dismiss changes</string>
    <string name="work_day_history_timestamp_example">2025–10–07 12:34:56</string>
    <string name="work_day_history_action_type_example">Modified:</string>
    <string name="work_day_history_entity_type_example">work day</string>
    <string name="work_day_history_change_field_name_example">field:</string>
    <string name="work_day_history_change_old_value_example">old value</string>
    <string name="work_day_history_change_arrow" translatable="false"> → </string>
    <string name="work_day_history_change_new_value_example">new value</string>
    <string name="settings_header_profile_title">Profile</string>
    <string name="settings_header_work_title">Work time</string>
    <string name="settings_header_sync_title">Sync</string>
    <string name="settings_workTime_week_duration_title">Work time duration</string>
    <string name="settings_workTime_week_duration_summary">By setting the length of the work time, you can display a message about the end of work.</string>
    <string name="settings_workTime_week_daysOfWorkingWeek_title">Days of working week</string>
    <string name="settings_workTime_week_firstWeekDay_title">First day of week</string>
    <string name="settings_daysOff_public_category_title">Public holidays</string>
    <string name="settings_daysOff_public_syncWithApi_summary_on">Holiday information will be retrieved from the %s.</string>
    <string name="settings_daysOff_public_syncWithApi_summary_off">Information about holidays will not be retrieved from an external source.</string>
    <string name="settings_daysOff_public_syncWithApi_title">Synchronize public holidays</string>
    <string name="settings_daysOff_public_country_title">Country</string>
    <string name="settings_daysOff_public_country_summary">The country whose public holidays will be retrieved.</string>
    <string name="settings_daysOff_public_syncNow_title">Sync now</string>
    <string name="settings_daysOff_public_syncNow_summary">When selected, public holidays will be downloaded and synced with previously downloaded ones.</string>
    <string name="settings_sync_timeSync_category_title">Time synchronization</string>
    <string name="settings_sync_timeSync_enable_title">Sync time with NTP server</string>
    <string name="settings_sync_timeSync_enable_summary_on">Current time is synchronized with NTP server.</string>
    <string name="settings_sync_timeSync_enable_summary_off">Current time is not synchronized with NTP server.</string>
    <string name="settings_sync_timeSync_server_title">NTP server address</string>
    <string name="settings_sync_timeSync_server_summary">Address of NTP server, used for time synchronization in app.</string>
    <string name="settings_backup_export_import">Export and Import</string>
    <string name="settings_backup_export_title">Export backup</string>
    <string name="settings_backup_export_summary">Save database to a file that can be shared</string>
    <string name="settings_backup_import_title">Import backup</string>
    <string name="settings_backup_import_summary">Restore database from a backup file</string>
    <string name="settings_backup_sharing">Sharing</string>
    <string name="settings_backup_share_title">Share backup</string>
    <string name="settings_backup_share_summary">Share backup file with other users</string>
    <string name="settings_key_profile" translatable="false">settings_profile</string>
    <string name="settings_key_workTime" translatable="false">settings_workTime</string>
    <string name="settings_key_workTime_week_daysOfWorkingWeek" translatable="false">settings_workTime_week_daysOfWorkingWeek</string>
    <string name="settings_key_workTime_duration" translatable="false">settings_workTime_duration</string>
    <string name="settings_key_workTime_firstWeekDay" translatable="false">settings_workTime_firstWeekDay</string>
    <string name="settings_key_daysOff_public_syncWithApi" translatable="false">settings_daysOff_public_syncWithApi</string>
    <string name="settings_key_daysOff_public_country" translatable="false">settings_daysOff_public_country</string>
    <string name="settings_key_daysOff_public_syncNow" translatable="false">settings_daysOff_public_syncNow</string>
    <string name="settings_key_sync" translatable="false">settings_sync</string>
    <string name="settings_key_sync_timeSync_enable" translatable="false">settings_sync_timeSync_enable</string>
    <string name="settings_key_sync_timeSync_server" translatable="false">settings_sync_timeSync_server</string>
</resources>