<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history_24dp"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_days_off_list"
            android:icon="@drawable/ic_baseline_date_range_24"
            android:title="@string/menu_days_off" />
    </group>

    <item android:title="@string/menu_header_info">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings_24dp"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about_24dp"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
